--- a/mypage_scheduler.html
+++ b/mypage_scheduler.html
@@ -27,13 +27,15 @@
     integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
 
+  <!-- calendar js -->
+  <script src="js/calendar.js"></script>
+  <script src="js/calendar_data.js"></script>
+
   <!--  마이페이지 css -->
-  <link rel="stylesheet" href="../css/mypage_scheduler.css" />
+  <link rel="stylesheet" href="/css/mypage_scheduler.css" />
 
   <!-- calendar css -->
   <link rel="stylesheet" href="css/calendar.css">
-  <script src="js/calendar.js"></script>
-  <script src="js/calendar_data.js"></script>
 
 </head>
 
@@ -46,33 +48,33 @@
           <li id="logo">
             <a href="index.html">
               <i class="fa-solid fa-dog fa-2x"></i>
-              <h3>슬기로운 반려생활</h3>
+              <h3 class="logo-title">슬기로운 반려생활</h3>
             </a>
           </li>
           <li class="hd__menu__list1__item list1-item1">
-            <a href="#">펫병원</a>
+            <a href="#" class="aTag-title">펫병원</a>
             <ul class="hd__menu__list1__item__submenu">
-              <li><a href="#">병원찾기</a></li>
+              <li><a href="#" class="aTag-title">병원찾기</a></li>
             </ul>
           </li>
           <li class="hd__menu__list1__item list1-item2">
-            <a href="#">게시판</a>
+            <a href="#" class="aTag-title">게시판</a>
             <ul class="hd__menu__list1__item__submenu">
-              <li><a href="#">커뮤니티</a></li>
-              <li><a href="#">병원후기</a></li>
-              <li><a href="#">펫가이드</a></li>
+              <li><a href="#" class="aTag-title">커뮤니티</a></li>
+              <li><a href="#" class="aTag-title">병원후기</a></li>
+              <li><a href="#" class="aTag-title">펫가이드</a></li>
             </ul>
           </li>
           <li class="hd__menu__list1__item list1-item3" id="myPage">
-            <a href="./mypage_main.html">마이페이지</a>
+            <a href="./mypage_main.html" class="aTag-title">마이페이지</a>
           </li>
           <div class="hd__menu__list1__item list1-item4" id="join">
-            <li><a href="#">로그인</a></li>
+            <li><a href="#" class="aTag-title">로그인</a></li>
             |
-            <li><a href="#">회원가입</a></li>
+            <li><a href="#" class="aTag-title">회원가입</a></li>
           </div>
         </ul>
-        <a href="#" id="hamburger">
+        <a href="#" id="hamburger" class="aTag-title">
           <i class="fa-solid fa-bars"></i>
         </a>
       </nav>
@@ -95,7 +97,7 @@
             </div>
           </div>
           <div class="profile-make">
-            <a href="./mypage_pet_reg.html">
+            <a href="./mypage_pet_reg.html" class="aTag-title">
               <img src="../img/add_circle.png" alt="" />
             </a>
           </div>
@@ -106,18 +108,18 @@
 
 
     <div class="mn-l"></div>
-    <main class="container">
+    <main class="main-container">
       <!-- 사이드메뉴 -->
       <div class="main-gnb">
         <div class="pc" id="mypagePcGnb">
           <ul>
-            <li><a href="./mypage_main.html">보호자 정보관리</a></li>
+            <li><a href="./mypage_main.html" class="aTag-title">보호자 정보관리</a></li>
           </ul>
           <ul>
-            <li><a href="./mypage_pet_reg.html">반려동물 등록</a></li>
+            <li><a href="./mypage_pet_reg.html" class="aTag-title">반려동물 등록</a></li>
           </ul>
           <ul>
-            <li><a href="./mypage_scheduler.html">의료수첩 관리</a></li>
+            <li><a href="./mypage_scheduler.html" class="aTag-title">의료수첩 관리</a></li>
           </ul>
         </div>
       </div>
@@ -142,7 +144,7 @@
             </div>
             <div class="calendar-header_list">
               <button type="button" class="list-content_btn">
-                <p>목록</p>
+                <p class="list-content_title">목록</p>
               </button>
             </div>
           </div>
@@ -190,17 +192,17 @@
     <div class="ft-l"></div>
     <footer class="ft">
       <div class="ft__buttons f-item1">
-        <a href="index.html">슬기로운 반려생활</a>
+        <a href="index.html" class="aTag-title">슬기로운 반려생활</a>
       </div>
       <div class="ft__mid-area">
         <div class="ft__buttons f-item2">
-          <a href="#">개인정보처리방침</a>
+          <a href="#" class="aTag-title">개인정보처리방침</a>
         </div>
         <div class="ft__buttons f-item3">
-          <a href="#">이용약관</a>
+          <a href="#" class="aTag-title">이용약관</a>
         </div>
         <div class="ft__buttons f-item4">
-          <a href="#">광고문의</a>
+          <a href="#" class="aTag-title">광고문의</a>
         </div>
       </div>
       <div class="ft__info">
