--- a/mypage_scheduler.html
+++ b/mypage_scheduler.html
@@ -32,11 +32,169 @@
   <script src="js/calendar_data.js"></script>
 
   <!--  마이페이지 css -->
-  <link rel="stylesheet" href="/css/mypage_scheduler.css" />
+  <link rel="stylesheet" href="css/mypage_scheduler.css" />
 
   <!-- calendar css -->
   <link rel="stylesheet" href="css/calendar.css">
 
+
+  <style>
+    .pet_modal-main-title,
+    .pet_modal-others>p {
+      font-size: 18px;
+      font-weight: bold;
+    }
+
+    .pet_modal-main-title {
+      display: flex;
+      margin-bottom: 20px;
+      /* border-bottom: 2px solid #303334; */
+    }
+
+    .pet_modal-main-title:nth-of-type(2)>p {
+      padding-top: 1rem;
+    }
+
+    /* 반려동물 기본정보 */
+    .pet_modal-info {
+      display: flex;
+      height: auto;
+      border-bottom: 2px solid #303334;
+      margin-bottom: 2rem;
+      padding-bottom: 1rem;
+    }
+
+
+    .pet_modal-info .pet_modal-info-profile {
+      flex: 2;
+      margin: 0 auto;
+      text-align: center;
+      align-content: center;
+      vertical-align: middle;
+    }
+
+    .pet_modal-info .pet_modal-info-profile img {
+      margin-top: 10px;
+      margin-bottom: 10px;
+    }
+
+    .pet_modal-info .pet_modal-info-profile .pet-name {
+      margin-top: 10px;
+      margin-bottom: 10px;
+    }
+
+    .pet_modal-info .pet_modal-info-text {
+      /* display: flex; */
+      /* width: 1000px; */
+      flex: 8;
+      height: auto;
+      display: table-cell;
+      vertical-align: middle;
+    }
+
+    .pet_modal-info .pet_modal-info-text .list-frm {
+      display: flex;
+      margin-bottom: 10px;
+      /* margin-right: 120px; */
+    }
+
+    .pet_modal-info .pet_modal-info-text>.list-frm:nth-child(3) .list {
+      flex: 2;
+      font-weight: bold;
+    }
+
+    .pet_modal-info .pet_modal-info-text>.list-frm:nth-child(3) .pet-info {
+      flex: 3;
+    }
+
+    .pet_modal-info .pet_modal-info-text>.list-frm .list {
+      flex: 2;
+      width: 100%;
+      font-weight: bold;
+    }
+
+    .pet_modal-info .pet_modal-info-text>.list-frm .pet-info {
+      flex: 8;
+      margin-left: 10px;
+    }
+
+    /* .pet_modal-info .pet_modal-info-text .list-frm .list,
+    .pet_modal-info .pet_modal-info-text .list-frm .pet-info {
+      margin-right: 30px;
+      width: 20%;
+    } */
+
+    /* 추가작성정보 */
+    .pet_other-info {
+      /* display: flex;/ */
+      height: auto;
+      border-bottom: 2px solid #303334;
+      margin-bottom: 2rem;
+      padding-bottom: 1rem;
+    }
+
+    .pet_other-info>.list-frm {
+      display: flex;
+    }
+
+
+
+    .pet_other-info>.list-frm .list {
+      flex: 2;
+      width: 100%;
+      font-weight: bold;
+      padding: 10px;
+    }
+
+    .pet_other-info>.list-frm .list-frm_date {
+      flex: 8;
+      width: 100%;
+      margin-left: 10px;
+      padding: 5px;
+      margin: 0px;
+    }
+
+
+    .pet_modal-info-area {
+      /* padding: 1%; */
+      width: 100%;
+      border-bottom: 2px solid #303334;
+      margin-bottom: 2rem;
+      padding-bottom: 1rem;
+    }
+
+    .pet_modal-info-area textarea {
+      width: 98%;
+      padding: 5px;
+    }
+
+    .pet_info-day {
+      display: flex;
+      height: auto;
+      margin-bottom: 1rem;
+      padding-bottom: 1rem;
+    }
+
+    .pet_info-day>.list {
+      flex: 1;
+      width: 100%;
+      font-weight: bold;
+      padding: 10px;
+    }
+
+    .pet_info-day>.list-frm_date {
+      flex: 9;
+      width: 100%;
+      margin-left: 10px;
+      padding: 5px;
+      margin: 0px;
+    }
+
+    .modal-footer .btn-primary {
+      background-color: var(--color-main-point2);
+      border: none;
+    }
+  </style>
 </head>
 
 <body>
@@ -84,8 +242,8 @@
     <div class="fg-l"></div>
     <figure class="fg-banner">
       <div class="user-profile">
-        <p>마이페이지</p>
-        <h2>반가워요</h2>
+        <p class="user-profile_p">마이페이지</p>
+        <h2 class="user-profile_h2">반가워요</h2>
         <div class="profile-list" onclick="petModify()">
           <div class="profile-area">
             <div class="upload-area">
@@ -166,43 +324,26 @@
 
     </main>
 
-    <!-- 모달 창 -->
-    <div class="modal fade" id="myModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-      <div class="modal-dialog">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-          </div>
-          <div class="modal-body">
-            <!-- Modal content -->
-          </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-            <button type="button" class="btn btn-primary">Save changes</button>
-          </div>
-        </div>
-      </div>
-    </div>
 
 
+    <!-- 모달 끝 -->
 
     <div class="mn-r"></div>
 
     <div class="ft-l"></div>
-    <footer class="ft">
+    <div class="ft__container">
       <div class="ft__buttons f-item1">
-        <a href="index.html" class="aTag-title">슬기로운 반려생활</a>
+        <a href="index.html" class="faTag-title">슬기로운 반려생활</a>
       </div>
       <div class="ft__mid-area">
         <div class="ft__buttons f-item2">
-          <a href="#" class="aTag-title">개인정보처리방침</a>
+          <a href="#" class="faTag-title">개인정보처리방침</a>
         </div>
         <div class="ft__buttons f-item3">
-          <a href="#" class="aTag-title">이용약관</a>
+          <a href="#" class="faTag-title">이용약관</a>
         </div>
         <div class="ft__buttons f-item4">
-          <a href="#" class="aTag-title">광고문의</a>
+          <a href="#" class="faTag-title">광고문의</a>
         </div>
       </div>
       <div class="ft__info">
@@ -213,21 +354,130 @@
       <div class="ft__copy">
         Copyright© 2023 슬반생.All right reserved. Designed by 슬반생
       </div>
-    </footer>
+    </div>
     <div class="ft-r"></div>
-  </div>
-  <!-- 햄버거 메뉴 구현 -->
-  <script src="../js/hambuger.js"></script>
 
-  <script>
-    $(function () {
-      $('#mypagePcGnb').children().eq(2).find('a').addClass('on');
-    });
-  </script>
 
-  <!-- jQuery, Popper.js 로드 -->
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.10.2/umd/popper.min.js"></script>
+
+
+    <!-- 모달 창 -->
+    <form class="modal fade" id="myModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog modal-xl"> <!-- modal-dialog 클래스에 modal-xl 추가 -->
+        <div class="modal-content">
+
+          <div class="modal-header">
+            <h5 class="modal-title" id="petModalLabel">의료수첩 작성</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+
+
+          <div class="modal-body">
+            <div class="pet_modal-main-title">
+              <p>반려동물 기본 정보</p>
+            </div>
+            <div class="pet_modal-info">
+              <div class="pet_modal-info-profile">
+                <img src="../img/img_profile1.png" alt="" />
+                <div class="pet-name">반려동물이름</div>
+              </div>
+              <div class="pet_modal-info-text">
+                <div class="list-frm">
+                  <div class="list">반려동물 품종</div>
+                  <div class="pet-info">소동물/햄스터</div>
+                </div>
+                <div class="list-frm">
+                  <div class="list">성별</div>
+                  <div class="pet-info">여</div>
+                </div>
+                <div class="list-frm">
+                  <div class="list">생일</div>
+                  <div class="pet-info">20200315</div>
+                  <div class="list">입양일</div>
+                  <div class="pet-info">20200315</div>
+                </div>
+                <div class="list-frm">
+                  <div class="list">중성화 여부</div>
+                  <div class="pet-info">중성화 완료</div>
+                </div>
+                <div class="list-frm">
+                  <div class="list">기초접종 여부</div>
+                  <div class="pet-info">모름</div>
+                </div>
+              </div>
+            </div>
+            <!-- <div class="pet_modal-others"> -->
+            <div class="pet_modal-main-title">
+              <p>추가 작성 정보</p>
+            </div>
+            <div class="pet_other-info">
+              <div class="list-frm">
+                <div class="list">몸무게</div>
+                <div class="list-frm_date">
+                  <input type="text" id="" maxlength="5" />
+                </div>
+                <div class="list">방문날짜</div>
+                <div class="list-frm_date">
+                  <input type="date" id="vday" />
+                </div>
+              </div>
+              <div class="list-frm">
+                <div class="list">병원명</div>
+                <div class="list-frm_date">
+                  <input type="text" id="" maxlength="25" />
+                </div>
+                <div class="list">담당수의사</div>
+                <div class="list-frm_date">
+                  <input type="text" id="" maxlength="15" />
+                </div>
+              </div>
+              <div class="list-frm">
+                <div class="list">내방이유</div>
+                <div class="list-frm_date">
+                  <input type="text" id="" maxlength="30" />
+                </div>
+                <div class="list">증상</div>
+                <div class="list-frm_date">
+                  <input type="text" id="" maxlength="30" />
+                </div>
+              </div>
+            </div>
+            <div class="pet_modal-main-title">
+              <p>* 진료내용 및 유의사항</p>
+            </div>
+
+            <div class="pet_modal-info-area">
+              <textarea name="act-text" placeholder="기타정보를 입력해보세요" rows="5"></textarea>
+            </div>
+            <div class="pet_info-day">
+              <div class="list">예약일</div>
+              <div class="list-frm_date">
+                <input type="date" id="petDay" />
+              </div>
+            </div>
+          </div>
+
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">취소</button>
+            <button type="button" class="btn btn-primary">저장</button>
+          </div>
+
+
+        </div>
+      </div>
+
+    </form>
+    <!-- 햄버거 메뉴 구현 -->
+    <script src="../js/hambuger.js"></script>
+
+    <script>
+      $(function () {
+        $('#mypagePcGnb').children().eq(2).find('a').addClass('on');
+      });
+    </script>
+
+    <!-- jQuery, Popper.js 로드 -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.10.2/umd/popper.min.js"></script>
 
 </body>
 
